Fixed text alignment.

--- a/modules/org.restlet/stylesheets/styles.css
+++ b/modules/org.restlet/stylesheets/styles.css
@@ -172,10 +172,12 @@ a {
 	text-align: center;
 }
 
-
-
 .content li {
     color: #757575;
+}
+
+.content p {
+    text-align: justify;
 }
 
 .content .follow-icon {
